--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Laralink">
   <!-- Site Title -->
+  <link href="static/ico/favicon.ico" rel="shortcut icon">
   <title>IcefireDom纯净生存服务器</title>
   <link rel="stylesheet" href="static/css/fontawesome.min.css">
   <link rel="stylesheet" href="static/css/bootstrap.min.css">
