--- a/qq.html
+++ b/qq.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Laralink">
   <!-- Site Title -->
-  <title>Blog | App Landing</title>
+  <link href="static/ico/favicon.ico" rel="shortcut icon">
+  <title>加入服务器</title>
   <link rel="stylesheet" href="static/css/fontawesome.min.css">
   <link rel="stylesheet" href="static/css/bootstrap.min.css">
   <link rel="stylesheet" href="static/css/lightgallery.min.css">
