--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@ permalink: /404.html
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="static/ico/favicon.ico" rel="shortcut icon">
   <title>页面被苦力怕炸了</title>
 
   <link rel="stylesheet" href="static/css/bootstrap.min.css">
