--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Laralink">
   <!-- Site Title -->
   <link href="static/ico/favicon.ico" rel="shortcut icon">
-  <title>IcefireDom纯净生存服务器</title>
+  <title>IcefireDom插件生存服务器</title>
   <link rel="stylesheet" href="static/css/fontawesome.min.css">
   <link rel="stylesheet" href="static/css/bootstrap.min.css">
   <link rel="stylesheet" href="static/css/lightgallery.min.css">
@@ -62,8 +62,8 @@
   <div class="cs-hero cs-style6 cs-center" id="home">
     <div class="container">
       <div class="cs-hero_text wow fadeIn" data-wow-duration="1s" data-wow-delay="0.3s">
-        <div class="cs-hero_subtitle">Java服务器</div>
-        <h1 class="cs-hero_title">欢迎<br><b class="cs-accent_color">来到</b>IcefireDom<br><b class="cs-accent_color">纯净生存服</b>!</h1>
+        <div class="cs-hero_subtitle">基岩版服务器</div>
+        <h1 class="cs-hero_title">欢迎<br><b class="cs-accent_color">来到</b>IcefireDom<br><b class="cs-accent_color">插件生存服</b>!</h1>
         <div class="cs-hero_btns">
           <a href="qq.html" class="cs-btn cs-style6 cs-btn_lg cs-rounded cs-primary_font cs-medium cs-accent_bg cs-white cs-accent_border cs-accent_10_bg_hover cs-accent_30_border_hover">
             <span class="cs-btn_text">立即加入</span>
@@ -263,7 +263,7 @@
                 <div class="cs-text_box cs-style1 cs-size1">
                   <h2 class="cs-text_box_title">关于<b class="cs-accent_color">服务器</b></h2>
                   <div class="cs-height_25 cs-height_lg_25"></div>
-                  <div class="cs-text_box_text">IcefireDom - 一个环境友好的 MinecraftJAVA版纯净生存服务器
+                  <div class="cs-text_box_text">IcefireDom - 一个环境友好的 Minecraft基岩版版插件生存服务器
 我们的相遇，冥冥之中都是缘分书写的故事。
 起源于朋友们你呼我应
 一起联机的快乐
