--- a/qq.html
+++ b/qq.html
@@ -30,6 +30,8 @@
         <div class="cs-hero_btns">
           <a href="https://jq.qq.com/?_wv=1027&k=R5jvJRlp" class="cs-btn cs-style6 cs-btn_lg cs-rounded cs-primary_font cs-medium cs-accent_bg cs-white cs-accent_border cs-accent_10_bg_hover cs-accent_30_border_hover">
             <span class="cs-btn_text">立即加入</span>
+<a href="minecraft://?addExternalServer=§l§k§c!!!§r§l§bIce§4fire§3Dom§l§k§c!!!§r §l§o|Icefire.play.cn.com:28047" class="cs-btn cs-style6 cs-btn_lg cs-rounded cs-primary_font cs-medium cs-accent_bg cs-white cs-accent_border cs-accent_10_bg_hover cs-accent_30_border_hover">
+            <span class="cs-btn_text">一键加入服务器</span>
 <a href="index.html" class="cs-btn cs-style6 cs-btn_lg cs-rounded cs-primary_font cs-medium cs-accent_bg cs-white cs-accent_border cs-accent_10_bg_hover cs-accent_30_border_hover">
             <span class="cs-btn_text">返回</span>
               <span><span></span></span>
